--- a/src/assets/style/blog-page.scss
+++ b/src/assets/style/blog-page.scss
@@ -30,7 +30,7 @@
           line-height: 100%;
           font-size: 38px;
           letter-spacing: -0.04em;
-          font-family: "Graphik LCG Medium";
+          font-family: "San Francisco";
         }
         p:nth-child(1) {
           color: $bsSmi;
@@ -86,7 +86,7 @@
           span {
             letter-spacing: -0.05em;
             font-size: 38px;
-            font-family: "Graphik LCG Medium";
+            font-family: "San Francisco";
             left: 0;
             bottom: 20px;
             padding-top: 10px;
