--- a/src/assets/style/career-page.scss
+++ b/src/assets/style/career-page.scss
@@ -21,7 +21,7 @@
         span {
           padding-top: 63px;
           font-size: 38.2px;
-          font-family: "Graphik LCG Medium";
+          font-family: "San Francisco";
           letter-spacing: -0.05em;
           width: 48.5%;
           display: flex;
@@ -112,7 +112,7 @@
         font-size: 38px;
         padding-left: 20px;
         width: 50%;
-        font-family: "Graphik LCG Medium";
+        font-family: "San Francisco";
         letter-spacing: -0.04em;
       }
     }
@@ -233,7 +233,7 @@
       }
       h6 {
         color: $light;
-        font-family: "Graphik LCG Medium";
+        font-family: "San Francisco";
         margin-top: -5px;
         box-sizing: border-box;
         font-size: 180px;
@@ -270,7 +270,7 @@
           line-height: 80%;
           box-sizing: border-box;
           font-size: 180px;
-          font-family: "Graphik LCG Medium";
+          font-family: "San Francisco";
           padding-left: 20px;
           width: 48%;
           letter-spacing: -0.04em;
