--- a/src/assets/style/company-page.scss
+++ b/src/assets/style/company-page.scss
@@ -17,7 +17,7 @@
         color: $light;
         border-bottom: 1px solid $bc;
         span {
-          font-family: "Graphik LCG Medium";
+          font-family: "San Francisco";
           letter-spacing: -0.07em;
         }
       }
@@ -38,7 +38,7 @@
             padding: 35px 0;
             border-bottom: 1px solid $bc;
             font-size: 90px;
-            font-family: "Graphik LCG Medium";
+            font-family: "San Francisco";
             letter-spacing: -0.06em;
           }
           p {
@@ -131,11 +131,11 @@
         line-height: 100%;
         padding: 50px 0;
         font-size: 90px;
-        font-family: "Graphik LCG Medium";
+        font-family: "San Francisco";
         letter-spacing: -0.06em;
         color: #ffffff66;
         span {
-          font-family: "Graphik LCG Medium";
+          font-family: "San Francisco";
           letter-spacing: -0.06em;
           color: $light;
         }
