--- a/src/assets/style/detail.scss
+++ b/src/assets/style/detail.scss
@@ -32,7 +32,7 @@
       h1 {
         font-size: 90px;
         //    background-color: red;
-        font-family: "Graphik LCG Medium";
+        font-family: "San Francisco";
         letter-spacing: -0.06em;
       }
       p {
@@ -116,7 +116,7 @@
         font-size: 37px;
         letter-spacing: -0.033em;
         line-height: 109%;
-        font-family: "Graphik LCG Medium";
+        font-family: "San Francisco";
       }
     }
     .section {
@@ -148,7 +148,7 @@
         display: flex;
         h2 {
           font-size: 21.5px;
-          font-family: "Graphik LCG Medium";
+          font-family: "San Francisco";
         }
         p {
           font-size: 21.5px;
