--- a/src/assets/style/expertise/brand-communication.scss
+++ b/src/assets/style/expertise/brand-communication.scss
@@ -29,7 +29,7 @@
         border-top: 1px solid $bc;
         h4 {
           font-size: 37px;
-          font-family: "Graphik LCG Medium";
+          font-family: "San Francisco";
           letter-spacing: -0.03em;
           line-height: 80%;
         }
@@ -73,7 +73,7 @@
         border-top: 1px solid $ourB;
         h4 {
           font-size: 37px;
-          font-family: "Graphik LCG Medium";
+          font-family: "San Francisco";
           letter-spacing: -0.03em;
           line-height: 80%;
         }
@@ -110,7 +110,7 @@
       h1 {
         font-size: 91px;
         letter-spacing: -0.07em;
-        font-family: "Graphik LCG Medium";
+        font-family: "San Francisco";
         line-height: 75%;
       }
       .case-studies-buttons {
