--- a/src/assets/style/home-page.scss
+++ b/src/assets/style/home-page.scss
@@ -7,7 +7,9 @@
     background-color: $main;
     position: relative;
     width: 100%;
-    height: 73.5vh;
+    height: calc(100vh - 80px);
+    background-image: "/assets/images/hero_desktop.webp";
+    background-size: 100vw auto;
     z-index: 1;
 
     .intro {
@@ -22,6 +24,8 @@
       justify-content: space-between;
       overflow: hidden;
       transition: all 0.19s;
+      background-image: "/assets/images/hero_desktop.webp";
+      background-size: 100vw auto;
 
       @include media("<=phone&tablet") {
         padding: 84px 30px 40px;
@@ -1009,5 +1013,9 @@
     scale: 1.1;
     border: none;
     cursor: pointer;
+  }
+
+  .hero {
+    font-size: 110px;
   }
 }
