--- a/src/main-style.css
+++ b/src/main-style.css
@@ -10,10 +10,10 @@
   position: relative;
 }
 .home-page .top-pointer-events-section {
-  background-color: #cdcecf;
+  background-color: #fff;
   position: relative;
   width: 100%;
-  height: 73.5vh;
+  height: calc(100vh - 80px);
   z-index: 1;
 }
 .home-page .top-pointer-events-section .intro {
@@ -32,6 +32,7 @@
   justify-content: space-between;
   overflow: hidden;
   transition: all 0.19s;
+  background-image: ;
 }
 @media (max-width: 567px) {
   .home-page .top-pointer-events-section .intro {
@@ -44,7 +45,7 @@
   }
 }
 .home-page .top-pointer-events-section .intro .headline-word {
-  font-size: 60px;
+  font-size: 100px;
   letter-spacing: -0.09em;
   line-height: 100px;
   margin: -1% 0 0 0;
@@ -376,12 +377,12 @@
 }
 @media (max-width: 567px) {
   .home-page .expertise-section .container-expertise .top-row .headline h2 {
-    font-size: 24px;
+    font-size: 80px;
   }
 }
 @media (min-width: 568px) and (max-width: 830px) {
   .home-page .expertise-section .container-expertise .top-row .headline h2 {
-    font-size: 24px;
+    font-size: 110px;
     padding-bottom: 6%;
   }
 }
@@ -437,7 +438,7 @@
 }
 .home-page .our-apabilities-section {
   width: 100%;
-  background-color: #191b1d;
+  background-color: #007ffd;
 }
 .home-page .our-apabilities-section .apabilities {
   box-sizing: border-box;
@@ -563,7 +564,7 @@
   overflow: hidden;
   width: 30px;
   height: 30px;
-  background-color: #3b3d3f;
+  background-color: #0080ff;
   border-radius: 50%;
 }
 .home-page .our-apabilities-section .apabilities .content .accordion div button span div {
@@ -633,7 +634,7 @@
   width: 256px;
   height: 256px;
   border-radius: 50%;
-  border: 1px solid #45494a;
+  border: 1px solid #ffffff;
 }
 @media (max-width: 567px) {
   .home-page .our-apabilities-section .apabilities .content .big-cricles div {
@@ -1331,7 +1332,7 @@
   width: 100%;
   padding: 80px 140px 320px;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
   column-gap: 40px;
   row-gap: 70px;
 }
@@ -1339,10 +1340,19 @@
 .work-page-card-container {
   width: 100%;
   border: none;
-  background-color: transparent;
-  flex-direction: column;
-  text-decoration: none;
+  width: 100%;
+height: 100%;
+border-radius: 15px;
+box-shadow: rgba(0, 0, 0, 0.12) 0px 5px 10px 0px;
+overflow: hidden;
+display: flex;
+flex-direction: column;
+transition: box-shadow .2s ease;
+text-decoration: none;
+color: inherit;
+background-color: white;
 }
+
 .work-page-card-container .card-image {
   width: 100%;
   position: relative;
@@ -3158,6 +3168,46 @@ body {
     transform: translate3d(0, 0, 0);
   }
 }
+
+.hero {
+  font-size: 110px;
+  background-image: "/assets/images/hero_desktop.webp";
+  background-size: 100vw auto;
+}
+
+.navigation {
+-webkit-backdrop-filter: saturate(180%) blur(5px);
+backdrop-filter: saturate(180%) blur(5px);
+backface-visibility: hidden;
+}
+.grid-bg {
+background-image: linear-gradient(0deg,rgba(163, 163, 163, 0.2),transparent 1px),linear-gradient(90deg,rgba(163,163,163,.2),transparent 1px);
+background-size: 10px 10px;
+}
+
+.gradient-text1 {
+  background-image: linear-gradient(90deg,#007CF0,#00DFD8);
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+-webkit-background-clip: text;
+}
+
+.gradient-text2 {
+  background-image: linear-gradient(90deg,#7928ca,#ff0080);
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+-webkit-background-clip: text;
+}
+
+.gradient-text3 {
+  background-image: linear-gradient(90deg,#ff4d4d,#f9cb28);
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+-webkit-background-clip: text;
+}
+.headline {
+  text-align:center;
+  }
 
 .footer {
   border-top: 1px solid rgba(25, 27, 29, 0.1019607843);
